app/styles/player.less
/**
 * This element exists so that the player, which is pegged at the bottom of the screen, can space itself out and not inadverntly overlap contnet we care about. 
 */


#apm_player_container{
    box-shadow: 0 0 10px rgba(0,0,0,0.3);
    border-top: 1px solid #e7e7e7;
    background: @dark-blue;
    width: 100%;
    // margin: 0 -50%;
    // position: fixed;
    // left: 50%;
    // bottom: 0%;
    height: 80px;
    //padding: 20px;

    color: #fff;


    .apm_player_wrap{
        max-width: 800px;
        margin: 0 auto;
        padding: 0 15px;
    }
    &.fixed{
        margin: 0 -50%;
        position: fixed;
        left: 50%;
        bottom: 0%;
        z-index: 1200;

    }
}
body.has-fixed-player{
    #apm_player_container{
        margin: 0 -50%;
        position: fixed;
        left: 50%;
        bottom: 0%;
        z-index: 1200;
    }
    #apm_player_container_spacer{
        content: '';
        height: 80px;
        width: 100%;
    }
}


#apm_player_wrap{

}

.ui-slider-horizontal .ui-slider-handle{ //ui-slider playhead no display
    display: none;
}



#apm_player_bar{  //the progress bar, or ui-slider
    border: none;  //no border
    border-radius: 0;  //no rounded corners
    margin-bottom: .3em;
    height: 0.5em;

    .ui-widget-header{ //ui-slider played area
        background: darken(@dark-blue, 25%);
        border-radius: 0;
    }

    &.ui-slider{
        background: lighten(@dark-blue, 25%);
        &.ui-slider-disabled{  //nothing playing
            background: transparent;
        }
        //helpful loading animation tips: http://andy.miccolis.net/css-3-animation-experiments/
        &.buffering{
            background: @med-blue;
            background: -webkit-linear-gradient(-45deg, @light-blue 25%, @med-blue 25%, @med-blue 50%, @light-blue 50%, @light-blue 75%, @med-blue 75%);
            background-size: 30px 30px;
            -webkit-animation: barberpole 20s infinite linear;
        }
    }
}

@-webkit-keyframes barberpole {
    from {background-position: 0%;}
    to {background-position: 100%;}
}

#apm_player_info{
    font-size: 1em;
    padding-top: 0.2em;
}

#apm_player_controls{
    font-size: 2em;
    float: left;
    margin: .1em 0.4em 0 0.2em;
    width: 1em;
}

#apm_player_play{
    opacity: .5;
    cursor: not-allowed;
    &[style]{  //sucks to use this selector, but it lets us make the play icon look disabled on initial load
        opacity: 1;
        cursor: pointer;
    }
}
#apm_player_pause{
    display: none;
    &[style]{  //sucks to use this selector, but it lets us make the play icon look disabled on initial load
        cursor: pointer;
    }
}
#apm_player_playtime{
    font-size: 0.8em;
}


/**
 * #apm_player_bar classes not playing:
 * ui-slider ui-slider-horizontal ui-widget ui-widget-content ui-corner-all ui-state-disabled ui-slider-disabled
 */

/**
 * #apm_player_bar classes buffering:
 * ui-slider ui-slider-horizontal ui-widget ui-widget-content ui-corner-all buffering
 */

/* #apm_player_bar classes playing:
    ui-slider ui-slider-horizontal ui-widget ui-widget-content ui-corner-all
 */

